Fix Spacing and others

--- a/styles.css
+++ b/styles.css
@@ -108,11 +108,11 @@ div .bioLeftAlign {
 }
 
 .topnav .active {
-  color: rgb(0, 0, 0);
-  background-color: black;
+  color: gray;
+  background-color: darkslategray;
 }
 
-div .footer {
+footer .footer {
   background-color: darkgray;
   color: white;
 }
